[package]
name = "glwfr"
version = "0.3.3"
edition = "2021"
authors = ["HiveMC <HiveMC3310@yandex.ru>"]
description = "Make graphics with OpenGL."
repository = "https://github.com/hiveMC3310/glwfr"
license = "MIT"
keywords = ["opengl", "graphics", "glfw"]
categories = ["graphics"]

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11.6"
gl = "0.14.0"
glfw = "0.45.0"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
rodio = "0.20.1"
thiserror = "2.0.9"
